--- a/force-app/main/default/aura/ReactContainer/ReactContainer.cmp
+++ b/force-app/main/default/aura/ReactContainer/ReactContainer.cmp
@@ -1,9 +1,12 @@
 <aura:component implements="flexipage:availableForAllPageTypes" access="global">
     <aura:attribute name="message" type="string" />
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
-    <lightning:card title="Your React Component">
+    <!-- <lightning:card title="Your React Component">
         <lightning:container aura:id="jsApp" src="{!$Resource.ReactComponent + '/index.html'}" onmessage="{!c.handleMessage}" onerror="{!c.handleError}" />
-    </lightning:card>
+    </lightning:card> -->
+
+    <lightning:container class="appContainer" aura:id="jsApp" src="{!$Resource.ReactComponent + '/index.html'}" onmessage="{!c.handleMessage}" onerror="{!c.handleError}" />
 
     <lightning:card title="Your Lightning Component">
         <p>Send Messages to Our ReactComponent</p>
