--- a/force-app/main/default/aura/ReactContainer/ReactContainer.cmp
+++ b/force-app/main/default/aura/ReactContainer/ReactContainer.cmp
@@ -1,10 +1,9 @@
-<aura:component implements="flexipage:availableForAllPageTypes" access="global">
+<aura:component controller="AccountService" implements="flexipage:availableForAllPageTypes" access="global">
+    <!-- Register attributes -->
     <aura:attribute name="message" type="string" />
+    <aura:attribute name="accounts" type="Object[]" />
+    <!-- Register handlers -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
-
-    <!-- <lightning:card title="Your React Component">
-        <lightning:container aura:id="jsApp" src="{!$Resource.ReactComponent + '/index.html'}" onmessage="{!c.handleMessage}" onerror="{!c.handleError}" />
-    </lightning:card> -->
 
     <lightning:container class="appContainer" aura:id="jsApp" src="{!$Resource.ReactComponent + '/index.html'}" onmessage="{!c.handleMessage}" onerror="{!c.handleError}" />
 
